--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -5,8 +5,25 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 .navbar_heading{
-    margin-right: 20px;
-    font-size: 32px;
+    margin-right: 12px;
+    font-size: 30px;
+    font-weight: 1000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(180deg, #13110f, #d60000, #6457f9);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    text-align: center;
+}
+.navbar_heading > span{
+    font-size: 25px;
+    font-weight: 700;
+    color: #6457f9;
 }
 .navbar_form{
     width: 450px;
@@ -35,7 +52,6 @@
     cursor: pointer;
     border-radius: 5px;
     margin-left: auto;
-    margin-top: 10px;
 
 }
 .search_result{
